# LUMA

./: README.md
LUMA/: LICENSE.txt  README.txt  check_luma_structure.py  demo.luma  luma.iss  luma_installer.iss  pyproject.toml  requirements.txt  setup.py  utils.py
LUMA/cli/: debug.py  ejecutar_luma.bat  main.py  repl.py
LUMA/core/ast/: base.py  cognitive.py
LUMA/core/db/: luma_db.py
LUMA/core/parsing/: dual.py  luma_db.py  natural.py  sexpr.py
LUMA/core/runtime/: interpreter.py  occ_engine.py
LUMA/core/validation/: coherency.py
LUMA/launcher/: run_luma.bat
LUMA/luma/: luma.lark  luma_core.py
LUMA/luma_lang.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
LUMA/luma_parser/: __init__.py  cli.py  exceptions.py
LUMA/luma_parser/parsing/: dual.py  sexp.py
LUMA/python/: luma.py
LUMA/tests/: bench_parsing.py  ejemplo.luma  test_guardado.py  unit
